--- a/src/main/webapp/resources/css/newstyles/style.css
+++ b/src/main/webapp/resources/css/newstyles/style.css
@@ -922,7 +922,7 @@ padding-left: 10px;
 #tabs {
   overflow: hidden;
   width: 100%;
-  margin: 0;
+  margin:-195px 0 0 0 ;
   padding: 0;
   list-style: none;
 }
@@ -1266,4 +1266,235 @@ a#login_pop:hover, a#join_pop:hover {
 .overlay:target {
     visibility: visible;
     opacity: 1;
+}
+/* #############################ICON BUTTON CSS################################################### */
+/* @font-face {
+  font-family: 'FontAwesome';
+  src: url('../fonts/fontawesome-webfont.eot?v=4.0.3');
+  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.0.3') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff?v=4.0.3') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.0.3') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.0.3#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+.iconbutton {        
+    display: inline-block;
+    white-space: nowrap;
+    background-color: #3bb9ff;
+    background-image: linear-gradient(top, #3bb9ff, #003366);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#3bb9ff', EndColorStr='#0066cc');
+    border: 2px solid #3bb9ff;
+    padding: 0 1.5em;
+    margin: 0.5em;
+    font: bold 1em/2em Arial, Helvetica;
+    text-decoration: none;
+    color: #ffffff;
+    text-shadow: 0 1px 0 rgba(255,255,255,.8);
+    border-radius: .2em;
+    box-shadow: 0 0 2px 2px rgba(255,255,255,.8) inset, 0 1px 0 rgba(0,0,0,.3);
+}
+
+.iconbutton:hover {
+    background-color: #ddd;        
+    background-image: linear-gradient(top, #fafafa, #ddd);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fafafa', EndColorStr='#dddddd');        
+}
+
+.iconbutton:active {
+    box-shadow: 0 0 4px 2px rgba(0,0,0,.3) inset;
+    position: relative;
+    top: 1px;
+}
+
+.iconbutton:focus {
+    outline: 0;
+    background: #fafafa;
+}    
+
+.iconbutton:before {
+    background: #ccc;
+    background: rgba(0,0,0,.1);
+    float: left;        
+    width: 1em;
+    text-align: center;
+    font-size: 1.5em;
+    margin: 0 1em 0 -1em;
+    padding: 0 .2em;
+    box-shadow: 1px 0 0 rgba(0,0,0,.5), 2px 0 0 rgba(255,255,255,.5);
+    border-radius: .15em 0 0 .15em;
+    pointer-events: none;        
+}
+
+Hexadecimal entities for the icons
+
+.add:before {
+    content: "\271A";
+}
+
+.edit:before {
+    content: "\270E";        
+}
+
+.delete:before {
+    content: "\2718";        
+}
+
+.save:before {
+    content: "\2714";        
+}
+
+.email:before {
+    content: "\2709";        
+}
+
+.like:before {
+    content: "\2764";        
+}
+
+.next:before {
+    content: "\279C";
+}
+
+.star:before {
+    content: "\2605";
+}
+
+.spark:before {
+    content: "\2737";
+}
+
+.play:before {
+    content: "\25B6";
+}
+.download:before{
+	content:"\f019";
+}
+
+.print:before{
+	content:"\f02f";
+}
+
+.show:before{
+	content:"\f06e";
+}
+
+.search:before{
+	content:"\f002";
+}
+
+.expand:before{
+	content:"\f00e";
+}
+ */
+ /* ###########################################Filter Box###################################################### */
+ #filter_box {
+
+	background:-moz-linear-gradient(top, #3bb9ff, #0066cc);
+
+	background:-webkit-gradient(linear, 0 0, 0 100%, from(#3bb9ff), to(#0066cc));
+
+	border:1px solid #003366;
+
+	border-radius:5px;
+
+	-moz-border-radius:5px;
+
+	-webkit-border-radius:5px;
+
+	-moz-box-shadow:inset 0 1px #3bb9ff, inset 0 -2px 5px #003366, 0 0 0 4px rgba(255,255,255,0.65);
+
+	-webkit-box-shadow:inset 0 1px #3bb9ff, inset 0 -2px 5px #003366, 0 0 0 4px rgba(255,255,255,0.65);
+
+	padding:9px;
+
+	width:98%;
+
+	height:35px;
+}
+#filter_box .wrapperFilter {
+	height:30px;
+	background:#fff;
+
+	border:1px solid #fff;
+
+	-moz-border-radius:2px;
+
+	-webkit-border-radius:2px;
+
+	-moz-box-shadow:inset 0 1px 2px rgba(0,0,0,.3), 0 1px #003366;
+
+	-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,.3), 0 1px #003366;
+
+	padding:0px 0 0px 1px;
+
+
+}
+#filter_box input {
+	 border:none;
+	 height:30px;
+	 color:#333;
+	 font:bold 20px Helvetica, Arial, sans-serif;
+	 width:97%;
+	 margin:0px 0 0 0;
+ }
+
+#filter_box input:focus {
+	 border:none;
+	 color:#333;
+	 font:bold 20px Helvetica, Arial, sans-serif;
+	 width:97%;
+	 outline:0;
+	 height:30px;
+ }
+
+.clicky {
+  /** Offset the Position **/
+  position: relative;
+  top: 0;
+  margin-top: 0;
+  margin-bottom: 10px;
+
+  /** 3D Block Effect **/
+  box-shadow: 0 5px 0 0 #fff;
+
+  /** Make it look pretty **/
+  display: block;
+  background:-moz-linear-gradient(top, #3bb9ff, #3366cc);
+
+	background:-webkit-gradient(linear, 0 0, 0 100%, from(#3bb9ff), to(#3366cc));
+
+  color: #fff;
+  padding: 0.3em 1em;
+  border: 0;
+  cursor: pointer;
+  font-size: 1.2em;
+  opacity: 0.9;
+  border-radius: 10px;
+}
+
+.clicky:active {
+  /** Remove 3D Block Effect on Click **/
+  box-shadow: none;
+  border:none;
+  margin-bottom: 0;
+}
+
+.clicky:hover {
+  opacity: 1;
+}
+
+.clicky:active,
+.clicky:focus {
+  /** Remove Chrome's Ugly Yellow Outline **/
+  outline: 0;
+}
+.searchpanel{
+
+border:#ccc 2px solid;
+border-bottom-left-radius:10px;
+border-bottom-right-radius:10px;
+padding:15px;
+margin-bottom:0px;
+background:#fff;
+background:-moz-linear-gradient(top, #ccc, #fff);
+background:-webkit-gradient(linear, 0 0, 0 100%, from(#ccc), to(#fff));
+
 }
