--- a/src/main/webapp/resources/css/newstyles/style.css
+++ b/src/main/webapp/resources/css/newstyles/style.css
@@ -1498,3 +1498,65 @@ background:-moz-linear-gradient(top, #ccc, #fff);
 background:-webkit-gradient(linear, 0 0, 0 100%, from(#ccc), to(#fff));
 
 }
+
+
+
+
+
+.buttonsheader {
+  position: relative;
+  white-space: nowrap;
+  min-height: 33px;
+  
+	
+	 }
+  .buttonsheader a {
+    -webkit-animation: bounceInDown 900ms 200ms ease-in-out both;
+    -moz-animation: bounceInDown 900ms 200ms ease-in-out both;
+    -ms-animation: bounceInDown 900ms 200ms ease-in-out both;
+    -o-animation: bounceInDown 900ms 200ms ease-in-out both;
+    animation: bounceInDown 900ms 200ms ease-in-out both;
+    width: 50px;
+    height: 33px;
+    position: absolute;
+    top: 0;
+		text-decoration: none;
+    padding-top: 9px;
+    outline-width: 0px;
+    z-index: 990;
+    color: #a675b3;
+    text-align: center;
+    line-height: 26px;
+    display: block; }
+    
+.buttonsheader a:not(.active) {
+      -webkit-box-shadow: inset 0 1px 1px #fff, inset 0 -1px 0px #fff, 0 9px 16px 0 #fff, 0 4px 3px 0 #fff, 0 0 0 1px #fff;
+      -moz-box-shadow: inset 0 1px 1px #fff, inset 0 -1px 0px #fff, 0 9px 16px 0 #fff, 0 4px 3px 0#fff, 0 0 0 1px #fff;
+      box-shadow: inset 0 1px 1px #fff, inset 0 -1px 0px #fff, 0 9px 16px 0 #fff, 0 4px 3px 0 #fff, 0 0 0 1px #fff;
+      background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #666), color-stop(100%, #ccc));
+      background-image: -webkit-linear-gradient(#666, #ccc);
+      background-image: -moz-linear-gradient(#666, #ccc);
+      background-image: -o-linear-gradient(#666, #ccc);
+      background-image: linear-gradient(#666, #ccc);
+      text-shadow: 0 0 21px rgba(223, 206, 228, 0.5), 0 -1px 0 #fff; }
+      
+
+.buttonsheader a.active, .buttonsheader a:active {
+      -webkit-box-shadow: 0 9px 16px 0 rgba(0, 0, 0, 0.1), 0 0 0 1px #170c22, 0 2px 1px 0 rgba(121, 65, 135, 0.5), inset 0 0 4px 3px rgba(15, 8, 22, 0.2);
+      -moz-box-shadow: 0 9px 16px 0 rgba(0, 0, 0, 0.1), 0 0 0 1px #170c22, 0 2px 1px 0 rgba(121, 65, 135, 0.5), inset 0 0 4px 3px rgba(15, 8, 22, 0.2);
+      box-shadow: 0 9px 16px 0 rgba(0, 0, 0, 0.1), 0 0 0 1px #170c22, 0 2px 1px 0 rgba(121, 65, 135, 0.5), inset 0 0 4px 3px rgba(15, 8, 22, 0.2);
+      background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #1f132e), color-stop(100%, #311d47));
+      background-image: -webkit-linear-gradient(#3bb9ff, #3366cc);
+      background-image: -moz-linear-gradient(#3bb9ff, #3366cc);
+      background-image: -o-linear-gradient(#3bb9ff, #3366cc);
+      background-image: linear-gradient(#3bb9ff, #3366cc);
+      text-shadow: 0 0 21px rgba(223, 206, 228, 0.5), 0 0 10px rgba(223, 206, 228, 0.4), 0 0 2px #3bb9ff;
+      color: #e4e3ce; }
+      
+   .buttonsheader a:nth-of-type(2) {
+      left: 51px; }
+    .buttonsheader a:nth-of-type(3) {
+      left: 102px; }
+    .buttonsheader a:nth-of-type(4) {
+      left: 153px; }
+    
