--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1201,14 +1201,14 @@ font-size:11px; font-style:italic; color:#ff0000;
 
 
 /* ################################text############################# */
-input[type="text"] {
+input[type="text"]{
 	outline: none;
 	padding: 13px;
 	width: 220px;
 	font-family: Helvetica, Arial, "Sans Serif";
 	font-size: 13px;
 	color: #666;
-	border: 1px solid #eee;
+	border: 1px solid #ccc;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
