--- a/src/main/webapp/resources/css/newstyles/style.css
+++ b/src/main/webapp/resources/css/newstyles/style.css
@@ -1717,3 +1717,58 @@ color:#fff;
 	color:#ccc;
 }
       
+      
+  .pressableButton {
+  align:center;
+  text-decoration: none;
+  color: white;
+  padding-right: 0px;
+  padding-left: 8px;
+  padding-top: 5px;
+  padding-bottom:5px;
+  text-transform: uppercase;
+  display: inline-block;
+  text-shadow: -2px 2px 0 rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+  padding-right: 50px;
+  margin: 0px;
+  -moz-transition: all 0.1s linear;
+  -o-transition: all 0.1s linear;
+  -webkit-transition: all 0.1s linear;
+  transition: all 0.1s linear;
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  }
+.pressableButton.blue {
+  background: -moz-linear-gradient(top, #a2d3e9, #7abedf);
+  background: -webkit-linear-gradient(top, #a2d3e9, #7abedf);
+  background: linear-gradient(to bottom, #a2d3e9, #7abedf);
+  box-shadow: -1px 0px 1px #6fadcb, 0px 1px 1px #54809d, -2px 1px 1px #6fadcb, -1px 2px 1px #54809d, -3px 2px 1px #6fadcb, -2px 3px 1px #54809d, -4px 3px 1px #6fadcb, -3px 4px 1px #54809d, -5px 4px 1px #6fadcb, -4px 5px 1px #54809d, -6px 5px 1px #6fadcb, -6px 7px 0 rgba(0, 0, 0, 0.05), -5px 8px 0 rgba(0, 0, 0, 0.05), -3px 9px 0 rgba(0, 0, 0, 0.04), -2px 10px 0 rgba(0, 0, 0, 0.04), -1px 11px 0 rgba(0, 0, 0, 0.03), 0px 12px 0 rgba(0, 0, 0, 0.03), 1px 13px 0 rgba(0, 0, 0, 0.02), 2px 14px 0 rgba(0, 0, 0, 0.02), 3px 15px 0 rgba(0, 0, 0, 0.01), 4px 16px 0 rgba(0, 0, 0, 0.01), 5px 17px 0 rgba(0, 0, 0, 0.01), 6px 18px 0 rgba(0, 0, 0, 0.01), inset 0 4px 5px -2px rgba(255, 255, 255, 0.5), inset 0 1px 0 0 rgba(0, 0, 0, 0.3);
+}
+.pressableButton.yellow {
+ background: -moz-linear-gradient(top, #f2d851, #ecc92b);
+  background: -webkit-linear-gradient(top, #f2d851, #ecc92b);
+  background: linear-gradient(to bottom, #f2d851, #ecc92b);
+  color: black;
+  text-shadow: -2px 2px 0 rgba(255, 255, 255, 0.3);
+  box-shadow: -1px 0px 1px #d9b826, 0px 1px 1px #b1961d, -2px 1px 1px #d9b826, -1px 2px 1px #b1961d, -3px 2px 1px #d9b826, -2px 3px 1px #b1961d, -4px 3px 1px #d9b826, -3px 4px 1px #b1961d, -5px 4px 1px #d9b826, -4px 5px 1px #b1961d, -6px 5px 1px #d9b826, -6px 7px 0 rgba(0, 0, 0, 0.05), -5px 8px 0 rgba(0, 0, 0, 0.05), -3px 9px 0 rgba(0, 0, 0, 0.04), -2px 10px 0 rgba(0, 0, 0, 0.04), -1px 11px 0 rgba(0, 0, 0, 0.03), 0px 12px 0 rgba(0, 0, 0, 0.03), 1px 13px 0 rgba(0, 0, 0, 0.02), 2px 14px 0 rgba(0, 0, 0, 0.02), 3px 15px 0 rgba(0, 0, 0, 0.01), 4px 16px 0 rgba(0, 0, 0, 0.01), 5px 17px 0 rgba(0, 0, 0, 0.01), 6px 18px 0 rgba(0, 0, 0, 0.01), inset 0 4px 5px -2px rgba(255, 255, 255, 0.5), inset 0 1px 0 0 rgba(0, 0, 0, 0.3);
+}
+.pressableButton.yellow:after {
+  -webkit-filter: drop-shadow(-2px 0 0 rgba(255, 255, 255, 0.4));
+  filter: drop-shadow(-2px 0 0 rgba(255, 255, 255, 0.4));
+}
+.pressableButton.yellow:before {
+  -webkit-filter: drop-shadow(0 -2px 0 rgba(255, 255, 255, 0.35));
+  filter: drop-shadow(0 -2px 0 rgba(255, 255, 255, 0.35));
+}
+
+.pressableButton:active {
+  box-shadow: none;
+  -moz-transform: translate3d(-6px, 6px, 0);
+  -ms-transform: translate3d(-6px, 6px, 0);
+  -webkit-transform: translate3d(-6px, 6px, 0);
+  transform: translate3d(-6px, 6px, 0);
+}
+
