--- a/src/main/webapp/resources/css/newstyles/style.css
+++ b/src/main/webapp/resources/css/newstyles/style.css
@@ -8,6 +8,7 @@ html, body {
 body {
 	width:100%;
 	margin: 0em;
+	
 	padding: 0em;
 	background: #fff;
 	font-family: Arial, Helvetica, sans-serif;
@@ -108,13 +109,6 @@ strong {
 
 /* Footer */
 
-#footer {
-	overflow: hidden;
-	margin-bottom: 1em;
-	padding: 4em 0em;
-	background: #FFFFFF;
-	box-shadow: 0px 0px 5px 2px rgba(0,0,0,.1);
-}
 
 /* Button style 1 */
 
@@ -432,10 +426,13 @@ outline: 0 none;
 
 
 #contact-form input#fname {
-background: #fff url('images/user.png') 5px 4px no-repeat;
+background: #fff url('images/user1male.png') 5px 4px no-repeat;
+}
+#contact-form input#oname {
+background: #fff url('images/org1.png') 5px 4px no-repeat;
 }
 #contact-form input#lname {
-background: #fff url('images/user.png') 5px 4px no-repeat;
+background: #fff url('images/user1male.png') 5px 4px no-repeat;
 }
 #contact-form input#country {
 background: #fff url('images/globe.png') 5px 4px no-repeat;
@@ -1513,6 +1510,11 @@ background:-webkit-gradient(linear, 0 0, 0 100%, from(#ccc), to(#fff));
 }
 .buttonswitchpanelAD{
 	margin:-65px 0 0 940px;
+	height:auto;
+	width:auto;
+}
+.buttonswitchpanelADmin{
+	margin:-65px 0 0 894px;
 	height:auto;
 	width:auto;
 }
