--- a/src/main/webapp/resources/css/newstyles/style.css
+++ b/src/main/webapp/resources/css/newstyles/style.css
@@ -582,11 +582,13 @@ margin-right: 50px;
 /* Welcome screen side menu */
 div.wrapperMenuSide {
 	width: 99%;
-	height:auto;
+	height: auto;
 	padding: 0 0px 0 0 ;
 	margin:0% 0 0 0%;
-	border: 2px solid #3bb9ff;
-	
+	border-left: 2px solid #3bb9ff;
+	border-right: 2px solid #3bb9ff;
+	border-top: 2px solid #3bb9ff;
+	border-bottom:none;
 }
 div.wrapperMenuSide_test {
 	width: 100%;
