--- a/src/main/webapp/resources/css/newstyles/style.css
+++ b/src/main/webapp/resources/css/newstyles/style.css
@@ -810,7 +810,8 @@ div.wrapperMenuSide_test {
 margin: 0px 0;
 padding: 0;
 width:100%; /*width of menu*/
-/* border: 2px solid #3bb9ff; */
+overflow: auto;
+border: 2px solid #3bb9ff;
 border-bottom-width: 0;
 }
 
