--- a/src/main/webapp/resources/css/newstyles/style.css
+++ b/src/main/webapp/resources/css/newstyles/style.css
@@ -581,14 +581,14 @@ margin-right: 50px;
 }
 /* Welcome screen side menu */
 div.wrapperMenuSide {
-	width: 99%;
+	width: 100%;
 	height: auto;
 	padding: 0 0px 0 0 ;
 	margin:0% 0 0 0%;
-	border-left: 2px solid #3bb9ff;
-	border-right: 2px solid #3bb9ff;
-	border-top: 2px solid #3bb9ff;
-	border-bottom:none;
+	/* border-left: 1px solid #3bb9ff;
+	border-right: 1px solid #3bb9ff;
+	border-top: 1px solid #3bb9ff;
+	border-bottom:none; */
 }
 div.wrapperMenuSide_test {
 	width: 100%;
@@ -811,7 +811,7 @@ margin: 0px 0;
 padding: 0;
 width:100%; /*width of menu*/
 overflow: auto;
-border: 2px solid #3bb9ff;
+/* border: 2px solid #3bb9ff; */
 border-bottom-width: 0;
 }
 
@@ -826,7 +826,7 @@ padding: 7px 2px;
 padding-left: 10px;
 text-decoration: none;
 border:1px solid #000;
-background-color: #3bb9ff;
+background: #3bb9ff;
   
   background-repeat: repeat-x;
 
@@ -838,7 +838,7 @@ background-color: #3bb9ff;
 
   /* Firefox 3.6+ */
   background: -moz-linear-gradient(top, #3bb9ff, #0066cc);
-
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3bb9ff', endColorstr='#0066cc'); /* for IE */
   /* IE 10 */
   background: -ms-linear-gradient(top, #3bb9ff, #0066cc);
 
@@ -895,6 +895,7 @@ padding: 0;
 background:#fff;
 padding: 0px 0;
 border-bottom: 1px solid #eeeeee;
+border-right:1px solid #3bb9ff;
 }
 
 .glossymenu div.submenu ul li a{
@@ -2033,7 +2034,14 @@ Third button
 	width:auto;
 	height:auto;
 }
-
+.Three-DeePjtHeader{
+font-family: Garamond, serif;
+line-height: 1em;
+color: #ffffff;
+font-weight:bold;
+font-size: 50px;
+text-shadow:0px 0px 0 rgb(231,231,231),1px 1px 0 rgb(216,216,216),2px 2px 0 rgb(202,202,202),3px 3px 0 rgb(187,187,187),4px 4px 0 rgb(173,173,173),5px 5px 0 rgb(158,158,158), 6px 6px 0 rgb(144,144,144),7px 7px 6px rgba(0,0,0,0.6),7px 7px 1px rgba(0,0,0,0.5),0px 0px 6px rgba(0,0,0,.2);
+}
 
 .ThreeDee{
 font-family: Garamond, serif;
@@ -2069,30 +2077,19 @@ text-shadow:0px 0px 0 rgb(35,162,231),0px 1px 0 rgb(20,147,216),0px 2px 0 rgb(6,
 }
 
 input[type=checkbox].css-checkbox {
-
 display:none;
-
 }
 
 
 input[type=checkbox].css-checkbox + label.css-label {
-
 padding-left:20px;
-		
 height:20px; 
-					
-display:inline-block;
-						
+display:inline-block;		
 line-height:20px;
-							
-background-repeat:no-repeat;
-							
-background-position: 0 0;
-							
-font-size:12px;
-							
-vertical-align:middle;
-							
+background-repeat:no-repeat;	
+background-position: 0 0;			
+font-size:12px;	
+vertical-align:middle;						
 cursor:pointer;
 
 						
@@ -2100,25 +2097,16 @@ cursor:pointer;
 
 						
 input[type=checkbox].css-checkbox:checked + label.css-label {
-
 background-position: 0 -20px;
-
 }
 	
 label.css-label {
-
 background-image:url('images/check1.png');
-
 -webkit-touch-callout: none;
-
 -webkit-user-select: none;
-
 -khtml-user-select: none;
-
 -moz-user-select: none;
-	
--ms-user-select: none;
-		
+-ms-user-select: none;	
 user-select: none;
 
 }
