--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -133,7 +133,8 @@ ul.login-list li p {
 }
 #header {
 height:100px;
-background: #666; /* for non-css3 browsers */
+background: url(../images/road.jpg);
+background-size: auto 100%;/* for non-css3 browsers */
 /* filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EEEEEE', endColorstr='#3366cc'); for IE
 background: -webkit-gradient(linear, left top, left bottom, from(#EEEEEE), to(#3366cc)); for webkit browsers
 background: -moz-linear-gradient(top, #EEEEEE, #6600cc); for firefox 3.6+ */
