--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -133,7 +133,7 @@ ul.login-list li p {
 }
 #header {
 height:100px;
-background: url(../images/road.jpg);
+background: url(../images/road.png);
 background-size: auto 100%;/* for non-css3 browsers */
 /* filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#EEEEEE', endColorstr='#3366cc'); for IE
 background: -webkit-gradient(linear, left top, left bottom, from(#EEEEEE), to(#3366cc)); for webkit browsers
