--- a/src/main/webapp/resources/css/newstyles/style-desktop.css
+++ b/src/main/webapp/resources/css/newstyles/style-desktop.css
@@ -1,6 +1,7 @@
 
 #header-wrapper {
 	color:#3bb9ff;
+	/* border:2px solid red; */
 }
 
 .homepage #header-wrapper {
@@ -8,8 +9,6 @@
 }
 
 #header {
-	
-	
 	margin: 0 auto 0 auto;
 	padding: 0 0 0em 0;
 	color:#3bb9ff;
