--- a/src/main/webapp/resources/css/newstyles/style.css
+++ b/src/main/webapp/resources/css/newstyles/style.css
@@ -9,10 +9,11 @@ body {
 	width:100%;
 	margin: 0em;
 	padding: 0em;
-	background:url(../images/map.png) no-repeat;
+	background:#336699;
+	/* background:url(../images/map.png) no-repeat;
 	background-repeat:no-repeat;
 	background-attachment:fixed;
-	background-position:center; 
+	background-position:center;  */
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #525252;
@@ -509,10 +510,10 @@ margin-right: 50px;
  font-size: 16px !important;
  width: 65%;   
  position: relative;
- background: #fff;
+ background: #000066;
  color: #3bb9ff;
  text-align: center;
- margin: 1% 0 0 7.7%; 
+ margin: 2.0% 0 0 7.7%; 
  padding:3% 5%;
 }
 .ribbon_login:before, .ribbon_login:after {
